--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,11 +22,18 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services' 
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 31
+    defaultConfig {
+        minSdkVersion 19
+        applicationId "com.example.app"
+        targetSdkVersion 31 // <-- and this too
+        // ...
+    }
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -67,5 +74,8 @@ flutter {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    // implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
