--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_login: ^4.1.1
+  firebase_core: ^1.20.0
+  firebase_auth: ^3.5.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
