--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_login: ^4.1.1
   firebase_core: ^1.20.0
   firebase_auth: ^3.5.0
+  pinput: ^2.2.31
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
@@ -63,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
