--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^1.20.0
   firebase_auth: ^3.5.0
   pinput: ^2.2.31
+  google_fonts: ^4.0.3
+  basic_utils: ^5.5.2
+  app_utils: ^0.0.5
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
