--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,6 +75,7 @@ flutter {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation 'com.google.firebase:firebase-auth-ktx'
     // implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
