--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core_platform_interface: ^4.5.1
   flutter_login: ^4.1.1
-  firebase_core: ^1.20.0
-  firebase_auth: ^3.5.0
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
   pinput: ^2.2.31
   google_fonts: ^4.0.3
   basic_utils: ^5.5.2
   app_utils: ^0.0.5
+  awesome_dialog: ^3.0.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
